--- a/.github/workflows/kernel-a13-5.15.yml
+++ b/.github/workflows/kernel-a13-5.15.yml
@@ -34,7 +34,7 @@ on:
         default: true
       BBG:
         description: '是否启用内核层面阻止对关键分区/设备节点的非法写入(LSM)？'
-        required: false
+        required: true
         type: boolean
         default: false
   
@@ -89,4 +89,4 @@ jobs:
       use_zram: ${{ inputs.use_zram }}
       use_kpm: ${{ inputs.use_kpm }}
       supp_op: ${{ inputs.supp_op || false }}
-      BBG: ${{ inputs.BBG || false }}
+      BBG: ${{ inputs.BBG || true }}
